syntax = "proto3";

option csharp_namespace = "GrpcService1";

import "google/protobuf/timestamp.proto";

package comment;


service Comment {

    rpc CreateComment (CreateCommentRequestGrpc) returns (CommentResponseGrpc);
    rpc CreateSubComment (CreateSubCommentRequestGrpc) returns (CommentResponseGrpc);
    rpc DeleteComment (DeleteCommentRequestGrpc) returns (StatusResponse);
    rpc UpdateComment (UpdateCommentRequestGrpc) returns (StatusResponse);
    rpc GetComments (GetCommentRequestGrpc) returns (CommentsResponse);
}

message CreateCommentRequestGrpc {

    string id = 1;
    string Content = 2;
    string PostId = 3;
}
message CreateSubCommentRequestGrpc {

    string id = 1;
    string Content = 2;
    string PostId = 3;
    string ParentCommetn = 4;
}
message UpdateCommentRequestGrpc {
    string id = 1;
    string Content = 2;
}
message DeleteCommentRequestGrpc {
    string id = 1;
}
message GetCommentRequestGrpc {
    string Postid = 1;
    int32 listsize = 2;
    int32 listnum = 3;
}
message CommentsResponse {
    repeated CommentResponseGrpc response_dtos = 1;
}
message CommentResponseGrpc {
    string Postid = 1;
    string Content = 2;
    google.protobuf.Timestamp Date = 3;
}
message StatusResponse {
    bool succes = 1;
}
